<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/id_layoutItemMaster"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_alignParentBottom="true"
    android:background="@color/common_google_signin_btn_text_dark_pressed">

    <TextView
        android:id="@+id/id_campoTema"
        android:layout_width="match_parent"
        android:layout_height="43dp"

        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:layout_toEndOf="@id/id_campoAno"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:text="@string/tema_da_palestra"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="16sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/id_campoOrador"
        android:layout_width="match_parent"
        android:layout_height="17dp"

        android:layout_alignStart="@+id/id_campoTema"
        android:layout_alignBottom="@+id/id_campoData"
        android:layout_marginStart="0dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="3dp"
        android:background="@android:color/transparent"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/fulano_de_tal"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/id_campoReferencia"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_above="@+id/id_campoOrador"
        android:layout_below="@+id/id_campoTema"
        android:layout_alignEnd="@+id/id_campoTema"
        android:layout_marginStart="5dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-4dp"
        android:layout_toEndOf="@+id/textView2"
        android:height="20dp"
        android:background="@android:color/transparent"
        android:text="@string/referencia"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textColorHint="@color/black"
        android:textSize="12sp"
        android:textStyle="italic" />

    <TextView

        android:id="@+id/id_campoAno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/_20_10"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/id_diaSemana"
        android:layout_width="66dp"
        android:layout_height="14dp"
        android:layout_alignEnd="@+id/Id_linhaHorizontalInterna"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="43dp"
        android:text="@string/domingo"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/id_campoData"
        android:layout_width="60dp"
        android:layout_height="21dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:text="@string/_2010"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/id_linhaSuperior"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="@color/white"
        android:backgroundTint="@android:color/white"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent" />

    <View
        android:id="@+id/Id_linhaHorizontalInterna"
        android:layout_width="60dp"
        android:layout_height="1dp"
        android:layout_above="@id/id_campoAno"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="35dp"
        android:background="@color/design_default_color_primary"
        android:backgroundTint="@android:color/holo_red_dark"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent" />

    <View
        android:id="@+id/id_linhaVerticalInterna"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_marginStart="66dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="14dp"
        android:background="@color/design_default_color_primary"
        android:backgroundTint="@android:color/white" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:layout_above="@+id/id_campoOrador"
        android:layout_below="@+id/id_campoTema"
        android:layout_alignStart="@+id/id_campoTema"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="-4dp"
        android:gravity="start"
        android:padding="3dp"
        android:text="@string/refer"
        android:textAlignment="textStart"
        android:textColor="#670303"
        android:textColorHint="#670303"
        android:textSize="10sp"
        android:textStyle="bold" />

</RelativeLayout>
